--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,17 +1,34 @@
+body {
+    font-family: "DIN Alternate", sans-serif;
+    font-size: 16px;
+    background-color: #EDE0D7;
+}
+  
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+
+.user-text{
+    margin-left: 13px;
+    color: #614F3F;
+    width: 300px;
+    background-color: #F6F6F6;
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+
+.capy-text{
+    margin-right: 13px;
+    color: #FFFFFF;
+    width: 300px;
+    background-color: #8CB9FF;
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
